# Changelog v0.6.4b
- Fixed missing particles in Abyssal Glowfern

- Added Jeweler Profession

# Changelog v0.6.2 - v0.6.3b
- Now Valoria requires Fluffy Fur
- Fixed Shade Blossom Bandage Recipe
- Fixed
    Unable to load model: 'minecraft:item/pick_crushing_0' referenced from: valoria:prospectors_pick#inventory: java.io.FileNotFoundException: minecraft:models/item/pick_crushing_0.json
    Unable to load model: 'minecraft:item/pick_crushing_2' referenced from: valoria:prospectors_pick#inventory: java.io.FileNotFoundException: minecraft:models/item/pick_crushing_2.json
    Unable to load model: 'minecraft:item/pick_crushing_1' referenced from: valoria:prospectors_pick#inventory: java.io.FileNotFoundException: minecraft:models/item/pick_crushing_1.json

- Fixed
    Couldn't load tag minecraft:impact_projectiles as it is missing following references: valoria:poisoned_kunai (from main)
    Couldn't load tag valoria:smoke_particle as it is missing following references: valora:infernal_core (from main)

- Fixed Cattail generation
- Fixed Pot generation
- Fixed Server Crashing
- Fixed Goblin Animations
- Fixed Pot Item Models
- Fixed Smoke Particles
- Fixed Necromancer Particles
- Fixed bug that coffee can be stacked up to 1646
- Fixed bug that Murasama wasn't based on "dash_distance" attribute
- Fixed Possible Server Crashing
- Fixed Undead moving AI
- Fixed Loyalty on Spears (Returned item removes all enchantments)
- Fixed Glover Rendering
- Fixed Valoria Portal Frames
- Fixed Piercing
- Fixed Spears Rotations
- Fixed a bug that projectiles can damage through FTB Chunks privates
- Fixed a bug that Rune of cold hasn't helped from other cold sources than Powder Snow
- Fixed a bug that putting a Shard into a Void Pillar causes a server crashing
- Fixed a small offset of placed items on Jewelry table

- Nerfed Rune's
- Buffed Silken Kunai

- Added Suspicious Ice generation
- Added Suspicious Iceberg generation
- Added Experience drop from Mobs
- Added Trolls