@@ -1,5 +1,6 @@
 # Changelog v0.6.4b
 - Fixed missing particles in Abyssal Glowfern
+- Fixed miss checking of Large model in Wraith katana and Wakizashi, causing missing model
 
 - Added Jeweler Profession
 
